tests/snapshots/blockflow/block_with_events/bad_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - blockflow
    - block-with-events
    - foo
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: path parameter block_hash (Invalid hex string: foo: foo)
